# rust-lisp

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: page.yml
rustlisp/: Cargo.toml
rustlisp-wasm/: Cargo.toml  README.md  index.html
rustlisp-wasm/src/: lib.rs
rustlisp/src/: interpreter.rs  lib.rs  native.rs  parser.rs  std.lisp  token.rs
rustlisp/src/values/: cons_cell.rs  hash_table_value.rs  macro_value.rs  symbol.rs  value.rs
rustlisp/tests/: bootstrap.rs  factorial.rs  fibonacci.rs  native.rs  stateful_function.rs
src/: ast.rs  interpreter.rs  lexer.rs  lib.rs  native.rs  parser.rs  std.lisp  token.rs
src/values/: cons_cell.rs  function_value.rs  macro_value.rs  mod.rs  native_function_value.rs  number_value.rs  scope.rs  symbol.rs  value.rs
tests/: bootstrap.rs  factorial.rs  fib.rs  fibonacci.rs  native.rs  stateful_function.rs  std.rs
