[package]
name = "rustlisp-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3.83", features = ["console", "Document", "Element", "HtmlElement", "Node", "Window", "MouseEvent", "HtmlTextAreaElement", "HtmlObjectElement", "CssStyleDeclaration"] }
rustlisp = { path = "../rustlisp"}
