[package]
name = "rustlisp"
version = "0.1.0"
edition = "2024"

[dependencies]
rustyline = { version = "17.0.2", optional = true }
thiserror = "2.0.17"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"

[features]
repl = ["rustyline"]

[[bin]]
name = "repl"
path = "./src/bin/repl.rs"
required-features = ["repl"]

[[bin]]
name = "rustlisp"
path = "./src/bin/rustlisp.rs"
